<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/text_edit"
        android:layout_width="235dp"
        android:layout_height="70dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="200dp"
        android:autofillHints="Enter text"
        android:ems="10"
        android:inputType="text"
        android:text="@string/text_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="124dp"
        android:text="@string/button_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup_fonts"
        android:layout_width="230dp"
        android:layout_height="165dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="288dp"
        android:orientation="vertical"
        android:paddingTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_normal" />

        <RadioButton
            android:id="@+id/rb_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_bold" />

        <RadioButton
            android:id="@+id/rb_italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_italic" />
    </RadioGroup>

    <Button
        android:id="@+id/button_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="60dp"
        android:text="@string/button_open"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>